--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
 <canvas id="gameCanvas" width="800" height="500" style="border:1px solid #000000;"> </canvas>
 
+<input id="message" type="text" placeholder="Message" />
+<button id="send">Send</button>
+
 <script src="GameData/Scripts/Client.js"></script>
 
 </body></html>
