--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
-<html><body>
-
-<title> Birdpals </title>
-
-<h1> Birdpals </h1>
-
-<canvas id="gameCanvas" width="800" height="500" style="border:1px solid #000000;"> </canvas>
-
-<input id="message" type="text" placeholder="Message" />
-<button id="send">Send</button>
-
-<script src="GameData/Scripts/Client.js"></script>
-
-</body></html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" type="image/png" href="Website Assets\Logo.png" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Birdpals</title>
+  </head>
+  <body>
+      <h1>Birdpals</h1>
+      <canvas
+        id="gameCanvas"
+        width="800"
+        height="500"
+        style="border: 5px solid #ffffff"
+      ></canvas>
+      <br />
+      <center><input id="message" type="text" placeholder="Message" />
+      <button id="send">Send</button></center>
+      <script src="GameData/Scripts/Client.js"></script>
+  </body>
+</html>
