--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Birdpals</title>
   </head>
   <body>
-      <h1>Birdpals</h1>
-      <canvas
-        id="gameCanvas"
-        width="800"
-        height="500"
-        style="border: 5px solid #ffffff"
-      ></canvas>
-      <br />
-      <center><input id="message" type="text" placeholder="Message" />
-      <button id="send">Send</button></center>
-      <script src="GameData/Scripts/Client.js"></script>
+    <h1>Birdpals</h1>
+    <canvas
+      id="gameCanvas"
+      width="800"
+      height="500"
+      style="border: 5px solid #ffffff"
+    ></canvas>
+    <br />
+    <center>
+      <input id="message" type="text" placeholder="Chat Here" />
+      <button id="send">Send</button>
+    </center>
+    <script src="GameData/Scripts/Client.js"></script>
   </body>
 </html>
