--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       height="500"
       style="border: 5px solid #ffffff"
     ></canvas>
-    <br />
     <center>
-      <input id="message" type="text" placeholder="Chat Here" />
-      <button id="send">Send</button>
+      <input id="message" type="text" maxlength="50" />
+      <button id="send">Chat!</button>
     </center>
     <script src="GameData/Scripts/Client.js"></script>
   </body>
