--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     ></canvas>
     <center>
       <input id="message" type="text" maxlength="50" />
-      <button id="send">Chat!</button>
+      <button id="send">Send</button>
     </center>
     <script src="GameData/Scripts/Client.js"></script>
   </body>
