--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       style="border: 5px solid #ffffff"
     ></canvas>
     <center>
-      <input id="message" type="text" maxlength="50" />
+      <input id="message" type="text" maxlength="50" autocomplete="off" />
       <button id="send">Send</button>
     </center>
     <script src="GameData/Scripts/Client.js"></script>
