--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <center>
       <input id="message" type="text" maxlength="50" autocomplete="off" />
       <button id="send">Send</button>
+      <br />
+      <br />
+      <div class="infocard">
+        <p class="infotext">
+          Birdpals is a MMO virtual world determined to make a safe environment
+          for children and a space to raise money for important charities
+        </p>
+      </div>
     </center>
     <script src="GameData/Scripts/Client.js"></script>
   </body>
