--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" type="image/png" href="Website Assets\Logo.png" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birdpals</title>
