--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="infocard">
         <p class="infotext">
           Birdpals is a MMO virtual world determined to make a safe environment
-          for children and to raise money for important charities
+          for children and raise money for important charities
         </p>
       </div>
     </center>
