--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       style="border: 5px solid #ffffff"
     ></canvas>
     <center>
-      <input id="message" type="text" maxlength="50" autocomplete="off" />
+      <input
+        id="message"
+        type="text"
+        maxlength="50"
+        autocomplete="off"
+        placeholder="Type a Message..."
+      />
       <button id="send">Send</button>
       <br />
       <br />
