--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" type="image/png" href="Website Assets\Logo.png" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta charset="UTF-8" />
