--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <title>Birdpals</title>
   </head>
   <body>
-    <h1>Birdpals</h1>
+    <div class="canvasTitle">
+      <h1>Birdpals</h1>
+    </div>
     <canvas
       id="gameCanvas"
       width="800"
@@ -33,8 +35,11 @@
       <br />
       <div class="infocard">
         <p class="infotext">
-          Birdpals is a MMO virtual world determined to make a safe environment
-          for children and raise money for important charities
+          This "Alpha Test" is for HISTORY ONLY! due to a recent staff
+          discussion, the game's mechanics, room and features will have a
+          COMPLETE REVAMP! Most of (if anything) of what you see here will be
+          completely different in the final game. Thank you for your continued
+          patience and support.
         </p>
       </div>
     </center>
