Classes in a separate script from the client

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         </p>
       </div>
     </center>
+    <script src="GameData/Scripts/Classes.js"></script>
     <script src="GameData/Scripts/Client.js"></script>
   </body>
 </html>
