--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         autocomplete="off"
         placeholder="Type a Message..."
       />
-      <button id="send">Send</button>
+      <button id="send" onClick="sendMessage()">Send</button>
       <br />
       <br />
       <div class="infocard">
@@ -43,7 +43,10 @@
         </p>
       </div>
     </center>
+
     <script src="GameData/Scripts/Classes.js"></script>
     <script src="GameData/Scripts/Client.js"></script>
+    <script src="GameData/Scripts/Codes.js"></script>
+
   </body>
 </html>
