--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       style="border: 5px solid #ffffff"
     ></canvas>
     <center>
+      <form>
       <input
         id="message"
         type="text"
@@ -30,7 +31,8 @@
         autocomplete="off"
         placeholder="Type a Message..."
       />
-      <button id="send" onClick="sendMessage()">Send</button>
+      <button id="send" type="submit" onClick="sendMessage()">Send</button>
+      </form>
       <br />
       <br />
       <div class="infocard">
