--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         autocomplete="off"
         placeholder="Type a Message..."
       />
-      <button id="send" type="submit" onClick="sendMessage()">Send</button>
+      <button id="send" type="button" onClick="sendMessage()">Send</button>
       </form>
       <br />
       <br />
