--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="canvasTitle">
-      <h1>Birdpals</h1>
+      <h1>Birdpals Classic</h1>
     </div>
     <canvas
       id="gameCanvas"
@@ -24,24 +24,33 @@
     ></canvas>
     <center>
       <form onSubmit="sendMessage(); return false">
-      <input
-        id="message"
-        type="text"
-        maxlength="50"
-        autocomplete="off"
-        placeholder="Type a Message..."
-      />
-      <button id="send" type="button" onClick="sendMessage(); return false">Send</button>
+        <input
+          id="message"
+          type="text"
+          maxlength="50"
+          autocomplete="off"
+          placeholder="Type a Message..."
+        />
+        <button id="send" type="button" onClick="sendMessage(); return false">
+          Send
+        </button>
       </form>
       <br />
       <br />
       <div class="infocard">
         <p class="infotext">
           This "Alpha Test" is for HISTORY ONLY! due to a recent staff
-          discussion, the game's mechanics, room and features will have a
+          discussion, the game's mechanics, rooms and features will have a
           COMPLETE REVAMP! Most of (if anything) of what you see here will be
           completely different in the final game. Thank you for your continued
           patience and support.
+        </p>
+      </div>
+      <div class="infocard2">
+        <p class="infotext2">
+          This is a single player demo of the original Birdpals concept. To
+          switch rooms type "/join roomName" in the chat box, The rooms include
+          "forest" and "town". Do expect some bugs
         </p>
       </div>
     </center>
@@ -49,6 +58,5 @@
     <script src="GameData/Scripts/Classes.js"></script>
     <script src="GameData/Scripts/Client.js"></script>
     <script src="GameData/Scripts/Codes.js"></script>
-
   </body>
 </html>
