--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="canvasTitle">
-      <h1>Birdpals Classic!</h1>
+      <h1>Birdpals Classic</h1>
     </div>
     <canvas
       id="gameCanvas"
