change name button

--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
           autocomplete="off"
           placeholder="Type a Message..."
         />
-        <button id="send" type="button" onClick="sendMessage(); return false">
-          Send
-        </button>
-      </form>
-      <br />
-      <br />
+        <button id="send" type="button" onClick="sendMessage(); return false">Send</button>
+      </form><br>
+      <button onclick="char.name = prompt('Choose a new name for your bird:')">Change name</button>
+      <br/>
+      <br/>
       <div class="infocard">
         <p class="infotext">
           This "Alpha Test" is for HISTORY ONLY! due to a recent staff
