--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birdpals</title>
+
+    <audio id="toyventurey">
+      <source src="GameData/Audio/Music/toyventurey.wav" type="audio/wav">
+    </audio>
   </head>
   <body>
     <div class="canvasTitle">
