Added music looping

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birdpals</title>
 
-    <audio id="toyventurey">
+    <audio id="toyventurey" controls loop>
       <source src="GameData/Audio/Music/toyventurey.wav" type="audio/wav">
     </audio>
   </head>
