--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Birdpals</title>
 
-    <audio id="toyventurey" controls loop>
-      <source src="GameData/Audio/Music/toyventurey.wav" type="audio/wav">
+    <audio id="toyventurey" loop>
+      <source src="GameData/Audio/Music/Alpha_Party.mp3" type="audio/wav">
     </audio>
   </head>
   <body>
