--- a/Beta/beta_play.html
+++ b/Beta/beta_play.html
@@ -7,5 +7,5 @@
 		<title>Super Secret Birdpals Beta</title>
 	</head>
 <body>
-    <iframe width="100%" height="1000px" src="https://www.youtube.com/embed/T59N3DPrvac?autoplay=1"></iframe>
+    <iframe width="100%" height="1000px" src="https://www.youtube.com/embed/PXqcHi2fkXI?autoplay=1"></iframe>
 </body>
