--- a/beta.html
+++ b/beta.html
@@ -3,5 +3,6 @@
     <title>Super Secret Birdpals Beta</title>
 </head>
 <body>
+	<script>window.location.replace("Beta/beta.html");</script>
     <iframe width="100%" height="1000px" src="https://www.youtube.com/embed/bjeEmgOVp18?autoplay=1"></iframe>
 </body>
